--- a/README.rdoc
+++ b/README.rdoc
@@ -13,6 +13,12 @@ The library is written by Sam Stephenson. Aslak Hellesøy forked it to gemify it
   (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
+== Testing
+
+To run all tests:
+
+  rake test
+
 == Copyright
 
 Copyright (c) 2009 Sam Stephenson. See LICENSE for details.
